--- a/workFaceSurvey/WebRoot/html-david/css/survey.css
+++ b/workFaceSurvey/WebRoot/html-david/css/survey.css
@@ -6,6 +6,7 @@ body{
 	font-size: 16px;
 }
 
+
 input[type="text"], .basic-grey input[type="email"]{
 	min-width: 150px;
 }
@@ -64,3 +65,36 @@ div.basic-grey div.question{
 	border: 1 solid red;
 }
 
+
+/* Following are mostly for uploadPicture page*/
+
+input[type="button"]{
+	min-width: 100px;
+	
+	height: 30px;
+	margin-bottom: 10px;
+	margin-top: 10px;
+	
+	padding: 3px 3px 3px 5px;
+	
+	box-shadow: inset 0px 1px 4px #ECECEC;
+	-moz-box-shadow: inset 0px 1px 4px #ECECEC;
+	-webkit-box-shadow: inset 0px 1px 4px #ECECEC;
+}
+
+div.uploadArea{
+	border: 1px solid #a0b3d6;
+	max-width: 400px;
+	padding: 3px;
+}
+
+
+
+::-webkit-file-upload-button {
+
+	padding: .4em;
+    line-height: 50px;
+    border: 1px solid #a0b3d6;
+    background: #f0f3f9;
+    color: #34538b;
+}
