--- a/workFaceSurvey/WebRoot/html-michael/css/question-items.css
+++ b/workFaceSurvey/WebRoot/html-michael/css/question-items.css
@@ -88,3 +88,8 @@ button {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+.radio input[type=text][disabled], .checkbox input[type=text][disabled] {
+  cursor: not-allowed;
+  background-color: #eee;
+  opacity: 1;
+}
