--- a/workFaceSurvey/WebRoot/html-michael/css/question-items.css
+++ b/workFaceSurvey/WebRoot/html-michael/css/question-items.css
@@ -1,3 +1,9 @@
+.page-header {
+  background-color: #eee;
+  margin-top: 0 !important;
+  padding-top: 20px !important;
+}
+
 .radio input[type=text], .checkbox input[type=text] {
   display: block;
   height: 34px;
@@ -59,7 +65,7 @@ button {
   }
 }
 
-.input-group-btn button {
+.input-group-lg .input-group-btn button {
   padding: 10px 24px !important;
 }
 
@@ -94,8 +100,24 @@ button {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-.radio input[type=text][disabled], .checkbox input[type=text][disabled] {
-  cursor: not-allowed;
-  background-color: #eee;
-  opacity: 1;
+
+.tag-label {
+  background-color: #5bc0de;
+  color: white;
+  display: inline-block;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 22px;
+  margin: 0 8px 8px 0;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  font-weight: 700;
+  white-space: nowrap;
+}
+
+.tag-label span {
+  margin-left: 5px;
+  margin-right: -5px;
+  cursor: pointer;
 }
